--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,12 @@ subprojects {
   apply plugin: 'idea'
 
   repositories {
-    mavenCentral()
+    maven {
+      url 'http://maven.aliyun.com/nexus/content/groups/public/'
+    }
+    maven {
+      url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'
+    }
   }
 
 
