--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,7 @@ include "misc"
 include "dwr"
 include "jsf"
 include "rxjava"
+include "disruptor"
+include "myprocessor"
+include "spring"
+include "servlet"
