--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,12 @@ subprojects {
   }
 
   repositories {
-    mavenCentral()
+    maven {
+      url 'http://maven.aliyun.com/nexus/content/groups/public/'
+    }
+    maven {
+      url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'
+    }
   }
 
   run {
