--- a/spring/build.gradle
+++ b/spring/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
+  implementation 'org.codehaus.groovy:groovy:3.0.6'
   implementation group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
   implementation group: 'org.springframework', name: 'spring-core', version: '5.2.11.RELEASE'
   implementation group: 'org.springframework', name: 'spring-context', version: '5.2.11.RELEASE'
