--- a/rxjava/build.gradle
+++ b/rxjava/build.gradle
@@ -1,3 +1,4 @@
 dependencies {
+  implementation 'org.jetbrains:annotations:20.1.0'
   compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.2.19'
 }
