--- a/build.gradle
+++ b/build.gradle
@@ -15,12 +15,7 @@ subprojects {
   }
 
   repositories {
-    maven {
-      url 'http://maven.aliyun.com/nexus/content/groups/public/'
-    }
-    maven {
-      url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'
-    }
+    mavenCentral()
   }
 
   run {
