--- a/misc/build.gradle
+++ b/misc/build.gradle
@@ -4,6 +4,7 @@
 
 dependencies {
   compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
+  implementation 'com.google.guava:guava:30.0-jre'
   compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
   compile group: 'org.openjdk.jol', name: 'jol-core', version: '0.14'
   testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
